# NeMo-text-processing

./: MANIFEST.in  build_grammars.py  environment.yml  infer.py  pyproject.toml  requirements.txt
nemo_text_processing/inverse_text_normalization/: __init__.py  infer.py  inverse_normalize.py  itn_inference.py
nemo_text_processing/inverse_text_normalization/bn/: __init__.py  graph_utils.py
nemo_text_processing/inverse_text_normalization/bn/data/address/: cities.tsv  context_cues.tsv  ordinals.tsv  special_characters.tsv  states.tsv
nemo_text_processing/inverse_text_normalization/bn/data/date/: century.tsv  months.tsv
nemo_text_processing/inverse_text_normalization/bn/data/measure/: measurements.tsv
nemo_text_processing/inverse_text_normalization/bn/data/money/: currency.tsv
nemo_text_processing/inverse_text_normalization/bn/data/numbers/: compound_hundreds.tsv  digit.tsv  hundred.tsv  labels_exception.tsv  paune.tsv  teens_and_ties.tsv  thousands.tsv  zero.tsv
nemo_text_processing/inverse_text_normalization/bn/data/ordinals/: digit.tsv  digit_fem.tsv  hundred_digit.tsv  hundred_digit_fem.tsv  morph_features.tsv  suffix.tsv  suffix_fem.tsv  teens_and_ties.tsv  teens_and_ties_fem.tsv
nemo_text_processing/inverse_text_normalization/bn/data/telephone/: context_cues.tsv  country_codes.tsv  eng_digit.tsv  eng_zero.tsv  (+1 more)
nemo_text_processing/inverse_text_normalization/bn/taggers/: cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  tokenize_and_classify.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/bn/verbalizers/: cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/far_files/: en_itn_lower_cased.far  ml_itn.far  mr_itn.far.far  ta_itn.far
nemo_text_processing/inverse_text_normalization/hi/taggers/: cardinal.py
nemo_text_processing/inverse_text_normalization/ml/: graph_utils.py
nemo_text_processing/inverse_text_normalization/ml/taggers/: __init__.py  cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  tokenize_and_classify.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/ml/verbalizers/: __init__.py  cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/mr/taggers/: cardinal.py  decimal.py  ordinal.py  time.py  tokenize_and_classify.py
nemo_text_processing/inverse_text_normalization/mr/verbalizers/: ordinal.py  verbalize.py  whitelist.py
nemo_text_processing/inverse_text_normalization/pa/: graph_utils.py
nemo_text_processing/inverse_text_normalization/pa/taggers/: cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  tokenize_and_classify.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/pa/verbalizers/: cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/ta/: graph_utils.py
nemo_text_processing/inverse_text_normalization/ta/taggers/: cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  tokenize_and_classify.py  whitelist.py  word.py
nemo_text_processing/inverse_text_normalization/ta/verbalizers/: cardinal.py  date.py  decimal.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
requirements/: requirements_build.txt  requirements_inference.txt
(+83 files in other folders)
