[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo_text_processing"
version = "1.1.0"
description = "NeMo Text Processing - Inverse Text Normalization and Text Normalization"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "NVIDIA", email = "nemo-toolkit@nvidia.com"}
]
keywords = ["NLP", "text normalization", "inverse text normalization", "ITN", "TN", "ASR", "TTS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

# =============================================================================
# MINIMAL DEPENDENCIES (Inference with pre-built .far files)
# =============================================================================
# NOTE: pynini must be installed via conda BEFORE pip install:
#   conda install -c conda-forge pynini
#
# These are the only deps needed to load and use pre-built .far grammars
dependencies = [
    "pynini>=2.1.5",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
# =============================================================================
# BUILD: Full dependencies for building grammars from source
# =============================================================================
# Install with: uv pip install "nemo-text-processing[build]"
build = [
    "joblib>=1.2.0",
    "sacremoses>=0.0.53",
    "tqdm>=4.64.0",
    "inflect>=6.0.0",
]

# =============================================================================
# FULL: Everything needed for TN/ITN (build + inference)
# =============================================================================
# Install with: uv pip install "nemo-text-processing[full]"
full = [
    "nemo_text_processing[build]",
]

# =============================================================================
# DEV: Development and testing dependencies  
# =============================================================================
# Install with: uv pip install "nemo-text-processing[dev]"
dev = [
    "nemo_text_processing[build]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

# =============================================================================
# ALL: Everything
# =============================================================================
all = [
    "nemo_text_processing[full]",
    "nemo_text_processing[dev]",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/NeMo-text-processing"
Documentation = "https://docs.nvidia.com/deeplearning/nemo/user-guide/docs/en/stable/"
Repository = "https://github.com/pi-labs-ai/NeMo-text-processing"
Issues = "https://github.com/pi-labs-ai/NeMo-text-processing/issues"

[project.scripts]
# CLI entry points (optional)
nemo-itn = "nemo_text_processing.inverse_text_normalization.inverse_normalize:main"
nemo-tn = "nemo_text_processing.text_normalization.normalize:main"

[tool.setuptools]
packages = ["nemo_text_processing"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nemo_text_processing*"]

[tool.setuptools.package-data]
"*" = ["*.far", "*.tsv", "*.txt"]

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["nemo_text_processing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --durations=0"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
